--- a/vendas.html
+++ b/vendas.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Página de Vendas</h1>
+    <P>Vendas = R$ 5.000,00</P>
     <a href="index.html">Voltar para a página inicial</a>
 </body>
 
